Added -client, -server and -XX:PermSize VM options to be compatible with NetBeans launcher.